<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#E6DFE6E4"
    android:backgroundTint="#C0D1D1"
    tools:context=".SignInActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            app:srcCompat="@drawable/whatsapp_6273368" />


    </LinearLayout>



    <EditText
        android:id="@+id/Email"
        android:layout_width="350dp"
        android:padding="10dp"
        android:background="@color/white"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/abc_gmail_com"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passWord"
        android:layout_width="350dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:background="@color/white"
        android:padding="10dp"
        android:hint="@string/password"
        android:inputType="numberPassword" />

    <TextView
        android:id="@+id/idSignUp"
        android:layout_marginTop="7dp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:textSize="15dp"
        android:layout_gravity="right"
        android:layout_marginRight="30dp"
        android:text="@string/sign_up_here" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="200dp"
        android:layout_marginTop="4dp"
        android:layout_height="wrap_content"
        android:padding="11dp"
        android:textSize="17sp"
        android:text="@string/sign_in" />

    <LinearLayout
        android:layout_width="350dp"
        android:layout_marginTop="13dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnGoogle"
            android:layout_width="51dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:padding="10dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/google_1088004"
            android:text="@string/google" />

        <Button
            android:id="@+id/btnFacebook"
            android:layout_width="45dp"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/fb_color"
            android:textSize="16sp"
            android:drawableLeft="@drawable/facebook_1924510"
            android:text="@string/facebook" />

    </LinearLayout>

    <TextView
        android:id="@+id/signInPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sign_up_with_phone"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp">

    </TextView>
</LinearLayout>